# ClassCompass

./: CODE_OF_CONDUCT.md  CONTRIBUTION.md  README.md  dev.ps1  dev.sh  docker-compose.yaml
flask-server/: .gitignore  Dockerfile  README.md  pyproject.toml
flask-server/src/flask_server/: __init__.py  global_config.py
flask-server/src/flask_server/classes/: common.py  course_card.py  course_info_to_json.py  user_profile.py
flask-server/src/flask_server/clients/: courses_static.json  database_client.py
flask-server/src/flask_server/services/: course_card_service.py  user_service.py
flask-server/src/flask_server/utilities/: json.py  search.py
flask-server/test/unit/: test_course_code_service.py  test_user_profile_service.py
frontend/: .gitignore  Dockerfile  package-lock.json  package.json
frontend/src/: App.js  index.js  theme.js
frontend/src/components/: AppBar.js  CourseCard.js  CoursePage.js  FindClasses.js  ReviewCard.js  Search.js  SignInSide.js  SignUp.js  YourClasses.js
frontend/src/context/: course-card-context.js  course-card-provider.js
frontend/src/helpers/: API.js
frontend/src/routes/: authentication.jsx
