[project]
name = "flask_server"
authors = [
    {name = "Benjamin Goel", email = "ben_goel@rogers.com"},
]
version = "1.0.0"
description = "The flask server for the ClassCompass application."
dependencies = [
    "flask",
    "firebase_admin",
    "python-dotenv",
    "flask-cors",
    "python-dateutil",
    "pytz",
    "thefuzz",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"
